--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "author": "Yago Theodoro <freonzx@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.7.5",
         "require-dir": "^1.2.0"
     },
