Add tests with Jest and Supertest

--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
         "require-dir": "^1.2.0"
     },
     "scripts": {
-        "start": "nodemon src/index.js"
+        "start": "nodemon src/index.js",
+        "test": "jest"
+    },
+    "devDependencies": {
+        "jest": "^24.9.0",
+        "supertest": "^4.0.2"
+    },
+    "jest": {
+        "testEnvironment": "node"
     }
 }
