--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "require-dir": "^1.2.0"
     },
     "scripts": {
-        "start": "nodemon src/index.js",
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
         "test": "jest"
     },
     "devDependencies": {
