--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "main": "index.js",
-    "author": "Yago Theodoro <freonzx@gmail.com>",
-    "license": "MIT",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "cors": "^2.8.5",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.7.5",
-        "require-dir": "^1.2.0"
-    },
-    "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js",
-        "test": "jest"
-    },
-    "devDependencies": {
-        "jest": "^24.9.0",
-        "supertest": "^4.0.2"
-    },
-    "jest": {
-        "testEnvironment": "node"
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Yago Theodoro <freonzx@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.5",
+    "require-dir": "^1.2.0"
+  },
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
