--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "express-validation": "^1.0.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "youch": "^2.0.10"
   },
   "scripts": {
     "start": "node src/index.js",
@@ -27,6 +29,7 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2"
   },
   "jest": {
